--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,24 +3,24 @@ name: Release Obsidian plugin
 on:
   push:
     tags:
-      - '*'          # dispara sempre que um tag novo for enviado pro GitHub
+      - "*"           # qualquer tag: 0.2.6, 1.0.0, etc.
+
+permissions:
+  contents: write     # precisa para criar/atualizar releases
 
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write   # precisa disso pra criar Release e anexar arquivos
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: Setup Node
+      - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
       - name: Install deps
         run: npm ci
@@ -28,20 +28,13 @@ jobs:
       - name: Build plugin
         run: npm run build
 
-      - name: Empacotar plugin
-        run: |
-          mkdir -p dist
-          cp main.js manifest.json styles.css dist/
-          cd dist
-          zip ../chartnotes-${GITHUB_REF_NAME}.zip ./*
-        shell: bash
-
-      - name: Criar GitHub Release
+      # Aqui é o ponto importante: subir os 3 arquivos do plugin
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          name: ${{ github.ref_name }}
-          draft: false
-          prerelease: false
-          files: chartnotes-${{ github.ref_name }}.zip
+          files: |
+            main.js
+            manifest.json
+            styles.css
 
